--- a/index.html
+++ b/index.html
@@ -31,12 +31,14 @@ body,td,th {
 		<p align="left" style="text-indent: 40px"><font>Welcome to my homepage! </font></p>
 	    <p align="left" style="text-indent: 40px">I am Zishuo Zhao, a&nbsp;third-year PhD student in the Department of ISE, UIUC, majoring in Operations Research, advised by Professor Yuan Zhou.</p>
         <p align="left" style="text-indent: 40px">I am  in exploration of research areas spanning the spectrum from economics to computer science and applied mathematics. I am interested in developing interdisciplinary models and solutions to novel areas of blockchain systems.</p>
-      <p align="left" style="text-indent: 40px">My life philosophy is <font color="8080ff"><em>Andante &amp; Cantabile</em></font>.&nbsp;</p></td>
+        <p align="left" style="text-indent: 40px">I am going to visit MIT and work with David Simchi-Levi from Fall 2023 to Summer 2024, and expect to be on the OR/OM market in Fall 2024.</p>
+<p align="left" style="text-indent: 40px">My life philosophy is <font color="8080ff"><em>Andante &amp; Cantabile</em></font>.&nbsp;</p></td>
 		<td width="36%" valign="top">
 		<p style="text-indent: 40px">&nbsp;</p>
 		<p style="text-indent: 40px"><i><font face="Consolas" color="#0000FF">Education</font></i> <font ><a href="CV/ZishuoZhao-CV.pdf"><font color="8080FF">[CV]</font></a> </font></p>
 		<p style="text-indent: 40px"><font><em>Graduate</em>&nbsp;</font></p>
         <p style="text-indent: 40px">PhD student, ISE, University of Illinois Urbana-Champaign&nbsp;</p>
+        <p style="text-indent: 40px">2021/01 - now</p>
         <p style="text-indent: 40px">Expected graduation: Summer 2025&nbsp;</p>
 		<p style="text-indent: 40px">&nbsp;</p>
 		<p style="text-indent: 40px"><em>Undergraduate</em></p>
@@ -71,8 +73,8 @@ body,td,th {
 	<p align="left" style="text-indent: 40px">Xin Chen*, Zexing Xu*, <u>Zishuo Zhao</u>*, Yuan Zhou* (alphabetical order)</p>
 	<p align="left" style="text-indent: 40px">ACM Conference on Fairness, Accountability, and Transparency (ACM <em>FAccT</em>), 2023</p>
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
-	<p align="left" style="text-indent: 40px"><i>Bayesian-Nash-Incentive-Compatible Mechanism for Blockchain Transaction Fee Allocation</i></p>
-	<p align="left" style="text-indent: 40px"><u>Zishuo Zhao</u>, Xi Chen, Yuan Zhou</p>
+	<p align="left" style="text-indent: 40px"><i>Bayesian Mechanism Design for Blockchain Transaction Fee Allocation</i></p>
+	<p align="left" style="text-indent: 40px"> Xi Chen*, David Simchi-Levi*, <u>Zishuo Zhao</u>*, Yuan Zhou* (alphabetical order)</p>
 	<p align="left" style="text-indent: 40px"><font>NeurIPS  Workshop on&nbsp;Decentralization and Trustworthy Machine Learning in Web3, 2022</font><br> 
 	  <font color="#0000FF">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<strong>Best Paper Award</strong></font></p>
 <p align="left" style="text-indent: 40px"> <font >CESC 2022</font></p>
