--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@ body,td,th {
 		<p align="left" style="text-indent: 40px">&nbsp;</p>
 		<p align="left" style="text-indent: 40px"><font>Welcome to my homepage! </font></p>
 	    <p align="left" style="text-indent: 40px">I am Zishuo Zhao, a&nbsp;third-year PhD student in the Department of ISE, UIUC, majoring in Operations Research, advised by Professor Yuan Zhou.</p>
-        <p align="left" style="text-indent: 40px">I am  in exploration of research areas spanning the spectrum from economics to computer science and applied mathematics. I am interested in developing interdisciplinary models and solutions to novel areas of blockchain systems.</p>
-        <p align="left" style="text-indent: 40px">I am going to visit MIT and work with David Simchi-Levi from Fall 2023 to Summer 2024, and expect to be on the OR/OM market in Fall 2024.</p>
-<p align="left" style="text-indent: 40px">My life philosophy is <font color="8080ff"><em>Andante &amp; Cantabile</em></font>.&nbsp;</p></td>
+        <p align="left" style="text-indent: 40px">I am&nbsp; currently visiting MIT and working with David Simchi-Levi from Fall 2023 to Summer 2024.</p>
+        <p align="left" style="text-indent: 40px">Office: E17 440F&nbsp;</p>
+
 		<td width="36%" valign="top">
 		<p style="text-indent: 40px">&nbsp;</p>
 		<p style="text-indent: 40px"><i><font face="Consolas" color="#0000FF">Education</font></i> <font ><a href="CV/ZishuoZhao-CV.pdf"><font color="8080FF">[CV]</font></a> </font></p>
@@ -41,11 +41,6 @@ body,td,th {
         <p style="text-indent: 40px">2021/01 - now</p>
         <p style="text-indent: 40px">Expected graduation: Summer 2025&nbsp;</p>
 		<p style="text-indent: 40px">&nbsp;</p>
-		<p style="text-indent: 40px"><em>Undergraduate</em></p>
-					<p style="text-indent: 40px"><font >Yao Class, IIIS, Tsinghua University</font></p>
-	  <p style="text-indent: 40px"><font >2016/05 - 2020/07  </font></p>
-		<p style="text-indent: 40px"><font >Dept. Computer Science and Technology, Tsinghua University</font></p>
-		<p style="text-indent: 40px"><font >2015/08 - 2016/05 </font>		</p>
 
 	  <p style="text-indent: 40px">&nbsp;</p></td>
 		<td width="31%" valign="top">
@@ -54,8 +49,6 @@ body,td,th {
 		<p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF">Research Interest</font></i></p>
 		<p align="left" style="text-indent: 40px">
   <font >I currently do research on <font color="#0000FF"> Blockchain Mechanism Design</font>, and my research interest spans  the fields of<font color="#0000C0"> Optimization, Algorithm Design, Mechanism Design and Cryptography.&nbsp;&nbsp;</font></font></p>
-	    <p align="left" style="text-indent: 40px"><font > I also have amateur interests in <font color="#8080FF">Computational Geometry, Computer Music   and Random Graph Theory</font>. Although I do not expect to do research in these areas, I feel very interested in them. I will be pleased if you would like to discuss about relevant topics with me.</font></p>
-      <p align="left" style="text-indent: 40px"><font >Additionally, I am interested in the <font color="#8080FF">CTF(Capture the Flag)</font> contest although I only have limited knowledge on it. </font></p></td>
 	</tr>
 	<tr>
 	  <td valign="top" width="33%"><p>&nbsp;</p>
@@ -113,7 +106,7 @@ body,td,th {
 	</tr>
 </table>
 
-<p align="right"><i><font color="#7070C0" >Last updated on 2023-04-07</font></i></p>
+<p align="right"><i><font color="#7070C0" >Last updated on 2023-09-01</font></i></p>
 
 </body>
 
