--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ body,td,th {
 		<p align="left" style="text-indent: 40px">&nbsp;</p>
 		<p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF">Research Interest</font></i></p>
 		<p align="left" style="text-indent: 40px">
-  <font >I currently do research on <font color="#0000FF"> Blockchain Mechanism Design</font>, and my research interest spans  the fields of<font color="#0000C0"> Optimization, Algorithm Design, Mechanism Design and Cryptography.&nbsp;&nbsp;</font></font></p>
+  <font >I currently do research on <font color="#0000FF"> Blockchain Mechanism Design</font>, and my research interest spans  the fields in (the intersection of) EconCS and Security. Particularly, I am interested in topics of <font color="#0000C0"> Game Theory, Mechanism Design,&nbsp;Fairness, Multi-Party Computation and Cryptography.&nbsp;&nbsp;</font></font></p>
 	</tr>
 	<tr>
 	  <td valign="top" width="33%"><p>&nbsp;</p>
