--- a/index.html
+++ b/index.html
@@ -48,13 +48,19 @@ body,td,th {
 		<p align="left" style="text-indent: 40px">&nbsp;</p>
 		<p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF">Research Interest</font></i></p>
 		<p align="left" style="text-indent: 40px">
-  <font >I currently do research on <font color="#0000FF"> Blockchain Mechanism Design</font>, and my research interest spans  the fields in (the intersection of) EconCS and Security. Particularly, I am interested in topics of <font color="#0000C0"> Game Theory, Mechanism Design,&nbsp;Fairness, Multi-Party Computation and Cryptography.&nbsp;&nbsp;</font></font></p>
-	</tr>
+  <font >I currently do research on <font color="#0000FF"> Mechanism Design</font>, and my research interest spans  the fields in (the intersection of) Operations Research, EconCS and Security. </p>
+		<p align="left" style="text-indent: 40px">Particularly, I am interested in topics related to algorithm and mechanism design for
+		  emerging applications in internet economics, including blockchain systems,
+		  e-commerce, ridesharing platforms and so on. </p>
+		<p align="left" style="text-indent: 40px">During the visit at MIT, I am working on data-driven
+		  mechanism design based on statistical/online learning.</p>	  
+	  </tr>
 	<tr>
 	  <td valign="top" width="33%"><p>&nbsp;</p>
 	    <p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF">Contacts</font></i></p>
 
 	    <p align="left" style="text-indent: 40px"><font >zishuoz2 [at] illinois.edu (expires in &gt;2025/06) </font></p>
+	    <p align="left" style="text-indent: 40px">wiku30 [at] mit.edu (expires in 2024/08)</p>
         <p align="left" style="text-indent: 40px"> <font ><a href="http://www.github.com/wiku30"> <font color="#8080FF">https://www.github.com/wiku30</font></a></font> <font >(permanent)</font></p>
         <p align="left" style="text-indent: 40px"><font color="#8080FF" ><a href="https://www.facebook.com/zishuo.zhao.528"></a></font></p>
         <p align="left" style="text-indent: 40px">&nbsp;</p>
@@ -101,8 +107,7 @@ body,td,th {
 		  <p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF">Extracurricular Life </font></i></p>
 		<p align="left" style="text-indent: 40px"><font >Beside math and computer sciences, I am also interested in music and visual arts since my childhood, and was good at writing essays &amp; poems during high school times. I still maintain <font color="#0000FF">Photography</font>, <font color="0000ff">Singing</font> and <font color="0000ff">Writing</font> as my main hobbies, and have developed new interests in <font color="8080ff">Orienteering</font> and <font color="8080ff">Sketching</font> during college years.</font></p>
 		<p align="left" style="text-indent: 40px">Particularly, I wrote <a href="2022/morning_star.html"> <font color="#8080FF">a recap of  2022</font></a> in Classical Chinese.</p>
-		<p align="left" style="text-indent: 40px"><font >I also have a hobby on the deterministic-RPG puzzle game <font color="#7070c0">Tower of the Sorcerer</font><font color="#8080ff"> <font color="#000000">since primary school, and also designed  <a href="https://github.com/wiku30/MagicTower"><font color="#8080FF">my own version</font></a></font></font>.</font></p>
-<p align="left" style="text-indent: 40px">&nbsp;</p></td>
+	  <p align="left" style="text-indent: 40px">&nbsp;</p></td>
 	</tr>
 </table>
 
