--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ body,td,th {
 		<!-- MSCellType="ContentBody" -->
 		<p align="left" style="text-indent: 40px">&nbsp;</p>
 		<p align="left" style="text-indent: 40px"><font>Welcome to my homepage! </font></p>
-	    <p align="left" style="text-indent: 40px">I am Zishuo Zhao, a&nbsp;third-year PhD student in the Department of ISE, UIUC, majoring in Operations Research, advised by Professor Yuan Zhou.</p>
+	    <p align="left" style="text-indent: 40px">I am Zishuo Zhao, a&nbsp;fourth-year PhD student in the Department of ISE, UIUC, majoring in Operations Research, advised by Professor Yuan Zhou.</p>
         <p align="left" style="text-indent: 40px">I am&nbsp; currently visiting MIT and working with David Simchi-Levi from Fall 2023 to Summer 2024.</p>
         <p align="left" style="text-indent: 40px">Office: E18 440F&nbsp;</p>
 
