--- a/index.html
+++ b/index.html
@@ -17,47 +17,42 @@ body,td,th {
 		<td colspan="3" valign="top">
 		<!-- MSCellType="ContentHead" -->
 		
-<p align="center"><font face="Calibri Light"><font size="6" >Zishuo Zhao</font></font></p>
+<p align="center"><font face="Calibri Light"><font size="6" >Zishuo Zhao</font></font><font color="8080FF"> </font></p>
 <div align="center">
-  <p><font color="#8080FF" >PhD Student, Industrial Engineering, University of Illinois Urbana-Champaign
+  <p><font color="#8080FF" >PhD Candidate, Industrial Engineering, University of Illinois Urbana-Champaign
   </font></p>
+  <p><span style="text-indent: 40px">Expected graduation: Summer 2025&nbsp;</span></p>
 </div>
 <p>&nbsp;</p></td>
 	</tr>
+
 	<tr>
 		<td valign="top" width="33%">
 		<!-- MSCellType="ContentBody" -->
 		<p align="left" style="text-indent: 40px">&nbsp;</p>
 		<p align="left" style="text-indent: 40px"><font>Welcome to my homepage! </font></p>
-	    <p align="left" style="text-indent: 40px">I am Zishuo Zhao, a&nbsp;fourth-year PhD student in the Department of ISE, UIUC, majoring in Operations Research, advised by Professor Yuan Zhou.</p>
+	    <p align="left" style="text-indent: 40px">I am Zishuo Zhao, a&nbsp;fourth-year PhD student in the Department of ISE, UIUC, majoring in Operations Research, advised by Professor Yuan Zhou. </p>
         <p align="left" style="text-indent: 40px">I am&nbsp; currently visiting MIT and working with David Simchi-Levi from Fall 2023 to Summer 2024.</p>
         <p align="left" style="text-indent: 40px">Office: E18 440F&nbsp;</p>
+        <p align="left" style="text-indent: 40px">My <font ><a href="CV/ZishuoZhao-CV.pdf"><font color="8080FF">[CV]</font></a></font></p>
 
-		<td width="36%" valign="top">
-		<p style="text-indent: 40px">&nbsp;</p>
-		<p style="text-indent: 40px"><i><font face="Consolas" color="#0000FF">Education</font></i> <font ><a href="CV/ZishuoZhao-CV.pdf"><font color="8080FF">[CV]</font></a> </font></p>
-		<p style="text-indent: 40px"><font><em>Graduate</em>&nbsp;</font></p>
-        <p style="text-indent: 40px">PhD student, ISE, University of Illinois Urbana-Champaign&nbsp;</p>
-        <p style="text-indent: 40px">2021/01 - now</p>
-        <p style="text-indent: 40px">Expected graduation: Summer 2025&nbsp;</p>
-		<p style="text-indent: 40px">&nbsp;</p>
+
 
 	  <p style="text-indent: 40px">&nbsp;</p></td>
-		<td width="31%" valign="top">
+		<td width="31%" colspan="2" valign="top">
 		<!-- MSCellType="NavBody" -->
 		<p align="left" style="text-indent: 40px">&nbsp;</p>
-		<p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF">Research Interest</font></i></p>
+		<p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF"><strong>Research Interest</strong></font></i> </p>
 		<p align="left" style="text-indent: 40px">
   <font >I currently do research on <font color="#0000FF"> Mechanism Design</font>, and my research interest spans  the fields in (the intersection of) Operations Research, EconCS and Security. </p>
-		<p align="left" style="text-indent: 40px">Particularly, I am interested in topics related to algorithm and mechanism design for
-		  emerging applications in internet economics, including blockchain systems,
-		  e-commerce, ridesharing platforms and so on. </p>
+		<p align="left" style="text-indent: 40px">Particularly, my recent research  focus is on the design of reliable and sustainable platforms  for digital economy and AI, with a special interest in mechanism design for blockchain and decentralized AI platforms. </p>
+		<p align="left" style="text-indent: 40px">My research has won <font color="#0000FF">Best Paper Award</font> at <font><em>NeurIPS  Workshop on&nbsp;Decentralization and Trustworthy Machine Learning in Web3</em>.</font></p>
 		<p align="left" style="text-indent: 40px">During the visit at MIT, I am working on data-driven
 		  mechanism design based on statistical/online learning.</p>	  
 	  </tr>
 	<tr>
 	  <td valign="top" width="33%"><p>&nbsp;</p>
-	    <p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF">Contacts</font></i></p>
+	    <p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF"><strong>Contacts</strong></font></i></p>
 
 	    <p align="left" style="text-indent: 40px"><font >zishuoz2 [at] illinois.edu (expires in &gt;2025/06) </font></p>
 	    <p align="left" style="text-indent: 40px">wiku30 [at] mit.edu (expires in 2024/08)</p>
@@ -67,22 +62,21 @@ body,td,th {
       <p align="left" style="text-indent: 40px"><font >ORCID: <font color="#8080FF"><a href="https://orcid.org/0000-0003-4247-7272"><font color=#0000D0>0000-0003-4247-7272</font></a></font></font></p>      </td>
 	  <td colspan="2" valign="top">
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
-	<p align="left" style="text-indent: 40px"><i><font color="#0000FF" face="Consolas">Research</font></i></p>
-	<p align="left" style="text-indent: 40px"><em>Personalized Pricing with Group Fairness Constraint</em></p>
+	<p align="left" style="text-indent: 40px"><i><font color="#0000FF" face="Consolas"><strong>Publications</strong></font></i></p>
+	<p align="left" style="text-indent: 40px"><strong>Personalized Pricing with Group Fairness Constraint</strong></p>
 	<p align="left" style="text-indent: 40px">Xin Chen*, Zexing Xu*, <u>Zishuo Zhao</u>*, Yuan Zhou* (alphabetical order)</p>
-	<p align="left" style="text-indent: 40px">ACM Conference on Fairness, Accountability, and Transparency (ACM <em>FAccT</em>), 2023</p>
+	<p align="left" style="text-indent: 40px">ACM FAccT, 2023</p>
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
-	<p align="left" style="text-indent: 40px"><i>Bayesian Mechanism Design for Blockchain Transaction Fee Allocation</i></p>
+	<p align="left" style="text-indent: 40px"><strong>Bayesian Mechanism Design for Blockchain Transaction Fee Allocation</strong></p>
 	<p align="left" style="text-indent: 40px"> Xi Chen*, David Simchi-Levi*, <u>Zishuo Zhao</u>*, Yuan Zhou* (alphabetical order)</p>
-	<p align="left" style="text-indent: 40px"><font>NeurIPS  Workshop on&nbsp;Decentralization and Trustworthy Machine Learning in Web3, 2022</font><br> 
-	  <font color="#0000FF">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<strong>Best Paper Award</strong></font></p>
+	<p align="left" style="text-indent: 40px"><font color="#0000FF">Best Paper Award, </font><font>NeurIPS  Workshop on&nbsp;Decentralization and Trustworthy Machine Learning in Web3, 2022</font></p>
 <p align="left" style="text-indent: 40px"> <font >CESC 2022</font></p>
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
-	<p align="left" style="text-indent: 40px"><i>Dynamic Car Dispatching and Pricing: Revenue and Fairness for Ridesharing Platforms</i></p>
+	<p align="left" style="text-indent: 40px"><strong>Dynamic Car Dispatching and Pricing: Revenue and Fairness for Ridesharing Platforms</strong></p>
 	<p align="left" style="text-indent: 40px"><u>Zishuo Zhao</u>, Xi Chen, Xuefeng Zhang, Yuan Zhou</p>
 	<p align="left" style="text-indent: 40px"> <font >IJCAI 2022</font>, <font color="0000C0">Long Oral</font> (top 3.75%)</p>
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
-	<p align="left" style="text-indent: 40px"><font ><em>ClusterSLAM: A SLAM Backend for Simultaneous Rigid Body Clustering and Motion Estimation</em></font></p>
+	<p align="left" style="text-indent: 40px"><font ><strong>ClusterSLAM: A SLAM Backend for Simultaneous Rigid Body Clustering and Motion Estimation</strong></font></p>
 	<p align="left" style="text-indent: 40px"><font >Jiahui Huang, Sheng Yang, <u>Zishuo Zhao</u>, Yukun Lai, Shi-Min Hu. </font></p>
 	<p align="left" style="text-indent: 40px"><font > <font >ICCV 2019</font><font color="#0000C0"> </font></font><font ><a href="2019/5594.pdf"><font color="#8080FF">[Link] </font></a></font></p>
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
@@ -111,7 +105,7 @@ body,td,th {
 	</tr>
 </table>
 
-<p align="right"><i><font color="#7070C0" >Last updated on 2023-09-01</font></i></p>
+<p align="right"><i><font color="#7070C0" >Last updated on 2024-03-20</font></i></p>
 
 </body>
 
