--- a/index.html
+++ b/index.html
@@ -62,8 +62,12 @@ body,td,th {
       <p align="left" style="text-indent: 40px"><font >ORCID: <font color="#8080FF"><a href="https://orcid.org/0000-0003-4247-7272"><font color=#0000D0>0000-0003-4247-7272</font></a></font></font></p>      </td>
 	  <td colspan="2" valign="top">
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
-	<p align="left" style="text-indent: 40px"><i><font color="#0000FF" face="Consolas"><strong>Publications</strong></font></i></p>
-	<p align="left" style="text-indent: 40px"><strong>Personalized Pricing with Group Fairness Constraint</strong></p>
+	<p align="left" style="text-indent: 40px"><i><font color="#0000FF" face="Consolas"><strong>Publications and Preprints</strong></font></i></p>
+	<p align="left" style="text-indent: 40px"><strong><font>Proof-of-Learning with Incentive Security</font></strong></p>
+	<p align="left" style="text-indent: 40px"><u>Zishuo Zhao</u>, Zhixuan Fang, Xuechao Wang, Yuan Zhou</p>
+	<p align="left" style="text-indent: 40px">In submission.&nbsp; <font ><a href="https://arxiv.org/abs/2404.09005"><font color="#8080FF">[Arxiv]</font></a></font></p>
+	<p align="left" style="text-indent: 40px">&nbsp;</p>
+<p align="left" style="text-indent: 40px"><strong>Personalized Pricing with Group Fairness Constraint</strong></p>
 	<p align="left" style="text-indent: 40px">Xin Chen*, Zexing Xu*, <u>Zishuo Zhao</u>*, Yuan Zhou* (alphabetical order)</p>
 	<p align="left" style="text-indent: 40px">ACM FAccT, 2023</p>
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
