--- a/index.html
+++ b/index.html
@@ -84,11 +84,10 @@ body,td,th {
 	<p align="left" style="text-indent: 40px"><font >Jiahui Huang, Sheng Yang, <u>Zishuo Zhao</u>, Yukun Lai, Shi-Min Hu. </font></p>
 	<p align="left" style="text-indent: 40px"><font > <font >ICCV 2019</font><font color="#0000C0"> </font></font><font ><a href="2019/5594.pdf"><font color="#8080FF">[Link] </font></a></font></p>
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
-	<p align="left" style="text-indent: 40px"><em><font color="#0000FF" face="Consolas"><strong>Working Projects</strong></font></em></p>
-	<p align="left" style="text-indent: 40px"><strong>Proof-of-Learning with Incentive Security</strong></p>
-	<p align="left" style="text-indent: 40px"><u>Zishuo Zhao</u>, Zhixuan Fang, Xuechao Wang, Yuan Zhou</p>
-<p align="left" style="text-indent: 40px"><strong>Incentive-Aware Dynamic Auction for Budgeted Bidders</strong></p>
+	<p align="left" style="text-indent: 40px"><em><font color="#0000FF" face="Consolas"><strong>Working Projects</strong></font></em>	</p>
+	<p align="left" style="text-indent: 40px"><strong>Incentive-Aware Dynamic Auction for Budgeted Bidders</strong></p>
 <p align="left" style="text-indent: 40px">David Simchi-Levi*, <u>Zishuo Zhao</u>*, Yuan Zhou*</p>
+<p align="left" style="text-indent: 40px">&nbsp;</p>
 	<p align="left" style="text-indent: 40px"><strong>Peer Prediction for Verifier’s Dilemma</strong></p>
 	<p align="left" style="text-indent: 40px"><em>(an interest-driven project, collaborators TBA)</em></p>
 <p align="left" style="text-indent: 40px">&nbsp;</p></td>
