--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@ body,td,th {
 	  <td colspan="2" valign="top">
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
 	<p align="left" style="text-indent: 40px"><i><font color="#0000FF" face="Consolas"><strong>Publications and Preprints</strong></font></i></p>
-	<p align="left" style="text-indent: 40px"><strong><font>Proof-of-Learning with Incentive Security</font></strong></p>
+	<p align="left" style="text-indent: 40px"><strong><font>Proof-of-Learning with Incentive Security</font></strong><font color="#8080FF">  <font ><a href="https://arxiv.org/abs/2404.09005"><font color="#8080FF">[Arxiv]</font></a></font></font></p>
 	<p align="left" style="text-indent: 40px"><u>Zishuo Zhao</u>, Zhixuan Fang, Xuechao Wang, Xi Chen, Yuan Zhou</p>
-	<p align="left" style="text-indent: 40px">In submission (2024).&nbsp; <font ><a href="https://arxiv.org/abs/2404.09005"><font color="#8080FF">[Arxiv]</font></a></font></p>
+	<p align="left" style="text-indent: 40px">In submission (2024).&nbsp;</p>
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
 <p align="left" style="text-indent: 40px"><strong>Personalized Pricing with Group Fairness Constraint</strong></p>
 	<p align="left" style="text-indent: 40px">Xin Chen*, Zexing Xu*, <u>Zishuo Zhao</u>*, Yuan Zhou* (alphabetical order)</p>
@@ -80,9 +80,10 @@ body,td,th {
 	<p align="left" style="text-indent: 40px"><u>Zishuo Zhao</u>, Xi Chen, Xuefeng Zhang, Yuan Zhou</p>
 	<p align="left" style="text-indent: 40px"> <font >IJCAI 2022</font>, <font color="0000C0">Long Oral</font> (top 3.75%)</p>
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
-	<p align="left" style="text-indent: 40px"><font ><strong>ClusterSLAM: A SLAM Backend for Simultaneous Rigid Body Clustering and Motion Estimation</strong></font></p>
+	<p align="left" style="text-indent: 40px"><font ><strong>ClusterSLAM: A SLAM Backend for Simultaneous Rigid Body Clustering and Motion Estimation</strong></font><font color="#8080FF"> </font><font ><a href="https://link.springer.com/article/10.1007/s41095-020-0195-3"><font color="#8080FF">[Link] </font></a></font></p>
 	<p align="left" style="text-indent: 40px"><font >Jiahui Huang, Sheng Yang, <u>Zishuo Zhao</u>, Yukun Lai, Shi-Min Hu. </font></p>
-	<p align="left" style="text-indent: 40px"><font > <font >ICCV 2019</font><font color="#0000C0"> </font></font><font ><a href="2019/5594.pdf"><font color="#8080FF">[Link] </font></a></font></p>
+	<p align="left" style="text-indent: 40px"><font > <font >CVMJ 2021</font></font></p>
+	<p align="left" style="text-indent: 40px"><font ><font >ICCV 2019</font><font color="#0000C0"> </font></font><font ><a href="https://link.springer.com/article/10.1007/s41095-020-0195-3"></a></font></p>
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
 	<p align="left" style="text-indent: 40px"><em><font color="#0000FF" face="Consolas"><strong>Working Projects</strong></font></em>	</p>
 	<p align="left" style="text-indent: 40px"><strong>Incentive-Aware Dynamic Auction for Budgeted Bidders</strong></p>
