--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ body,td,th {
 	<p align="left" style="text-indent: 40px"><strong>Incentive-Aware Dynamic Auction for Budgeted Bidders</strong></p>
 <p align="left" style="text-indent: 40px">David Simchi-Levi*, <u>Zishuo Zhao</u>*, Yuan Zhou*</p>
 <p align="left" style="text-indent: 40px">&nbsp;</p>
-	<p align="left" style="text-indent: 40px"><strong>(Peer Prediction for) Decentralized Verification Game</strong></p>
+	<p align="left" style="text-indent: 40px"><strong>Decentralized Verification Game</strong></p>
 	<p align="left" style="text-indent: 40px"><em>(an interest-driven project, collaborators TBA)</em></p>
 <p align="left" style="text-indent: 40px">&nbsp;</p></td>
 	</tr>
