--- a/index.html
+++ b/index.html
@@ -7,14 +7,17 @@
 body,td,th {
     font-family: Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
+.aaa {
+    font-family: Cambria, Hoefler Text, Liberation Serif, Times, Times New Roman, serif;
+}
 </style>
 </head>
 
-<body bgcolor="lavender">
+<body bgcolor="lavender" text="#000000">
 <table width="100%" height="100%" border="1" cellpadding="4" cellspacing="4" bordercolor="#000060" bordercolorlight="#00FFFF" bordercolordark="#000080">
 	<!-- MSTableType="nolayout" -->
 	<tr>
-		<td colspan="3" valign="top">
+		<td height="160" colspan="3" valign="top">
 		<!-- MSCellType="ContentHead" -->
 		
 <p align="center"><font face="Calibri Light"><font size="6" >Zishuo Zhao</font></font><font color="8080FF"> </font></p>
@@ -22,8 +25,7 @@ body,td,th {
   <p><font color="#8080FF" >PhD Candidate, Industrial Engineering, University of Illinois Urbana-Champaign
   </font></p>
   <p><span style="text-indent: 40px">Expected graduation: Summer 2026&nbsp;</span></p>
-</div>
-<p>&nbsp;</p></td>
+</div></td>
 	</tr>
 
 	<tr>
@@ -48,8 +50,9 @@ body,td,th {
 		<p align="left" style="text-indent: 40px">Particularly, my recent research  focus is on the design of reliable and sustainable platforms  for digital economy and AI, with a special interest in mechanism design for blockchain and decentralized AI platforms. </p>
 		<p align="left" style="text-indent: 40px">My research has won <font color="#0000FF">Best Paper Award</font> at <font><em>NeurIPS  Workshop on&nbsp;Decentralization and Trustworthy Machine Learning in Web3</em>.</font></p>
 		<p align="left" style="text-indent: 40px">During the visit at MIT, I am working on data-driven
-		  mechanism design based on statistical/online learning.</p>	  
-	  </tr>
+		  mechanism design based on statistical/online learning.</p>
+		<p align="left" style="text-indent: 40px">&nbsp; </p>
+	  <p align="left" class="aaa" style="text-indent: 40px"><em>P.S. I am very glad to know that my recent research projects on the intersection of blockchain mechanism design and (decentralized/trustworthy) AI, though currently in an immature form, have garnered significant industrial interest, especially from several startup companies. While I am enthusiastic about the potential of combining academia and industry in the long term, my current academic pressures limit my capacity to engage in industrial projects at this time. Nevertheless, I am happy to have general discussions with both academic and industry professionals about related topics and am open to academic collaboration and exploring possible future applications of my research in the industry.</em>  </p></tr>
 	<tr>
 	  <td valign="top" width="33%"><p>&nbsp;</p>
 	    <p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF"><strong>Contacts</strong></font></i></p>
