--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ body,td,th {
 	</tr>
 
 	<tr>
-		<td valign="top" width="33%">
+		<td width="33%" height="602" valign="top">
 		<!-- MSCellType="ContentBody" -->
 		<p align="left" style="text-indent: 40px">&nbsp;</p>
 		<p align="left" style="text-indent: 40px"><font>Welcome to my homepage! </font></p>
@@ -50,9 +50,9 @@ body,td,th {
 		<p align="left" style="text-indent: 40px">Particularly, my recent research  focus is on the design of reliable and sustainable platforms  for digital economy and AI, with a special interest in mechanism design for blockchain and decentralized AI platforms. </p>
 		<p align="left" style="text-indent: 40px">My research has won <font color="#0000FF">Best Paper Award</font> at <font><em>NeurIPS  Workshop on&nbsp;Decentralization and Trustworthy Machine Learning in Web3</em>.</font></p>
 		<p align="left" style="text-indent: 40px">During the visit at MIT, I am working on data-driven
-		  mechanism design based on statistical/online learning.</p>
-		<p align="left" style="text-indent: 40px">&nbsp; </p>
-	  <p align="left" class="aaa" style="text-indent: 40px"><em>P.S. I am very glad to know that my recent research projects on the intersection of blockchain mechanism design and (decentralized/trustworthy) AI, though currently in an immature form, have garnered some industrial interest, especially from several startup companies. While I am enthusiastic about the potential of combining academia and industry in the long term, my current academic pressures limit my capacity to engage in industrial projects at this time. Nevertheless, I am happy to have general discussions with both academic and industry professionals about related topics and am open to academic collaboration and exploring possible future applications of my research in the industry.</em>  </p></tr>
+		  mechanism design based on statistical/online learning. </p>
+	  <p align="left" class="aaa" style="text-indent: 40px"><em>P.S. I am very glad to know that my recent research projects on the intersection of blockchain mechanism design and (decentralized/trustworthy) AI, though currently in an immature form, have garnered some industrial interest, especially from several startup companies. While I am enthusiastic about the potential of combining academia and industry in the long term, my current academic pressures limit my capacity to engage in industrial projects at this time. Nevertheless, I am happy to have general discussions with both academic and industry professionals about related topics and am open to academic collaboration and exploring possible future applications of my research in the industry.</em>  </p>
+  <p align="left" class="aaa" style="text-indent: 40px">&nbsp;</p>	  </tr>
 	<tr>
 	  <td valign="top" width="33%"><p>&nbsp;</p>
 	    <p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF"><strong>Contacts</strong></font></i></p>
