--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ body,td,th {
 		<p align="left" style="text-indent: 40px">My research has won <font color="#0000FF">Best Paper Award</font> at <font><em>NeurIPS  Workshop on&nbsp;Decentralization and Trustworthy Machine Learning in Web3</em>.</font></p>
 		<p align="left" style="text-indent: 40px">During the visit at MIT, I am working on data-driven
 		  mechanism design based on statistical/online learning. </p>
-  <p align="left" class="aaa" style="text-indent: 40px"><em>P.S. I am very glad to know that my recent research projects on the intersection of blockchain mechanism design and (decentralized/trustworthy) AI, though currently in an immature form, have garnered some industrial interest, especially from several startup companies. While I am enthusiastic about the potential of combining academia and industry in the long term, my current academic pressures limit my capacity to engage in industrial projects at this time. Nevertheless, I am happy to have general discussions with both academic and industry professionals about related topics and am open to academic collaboration and exploring possible future applications of my research in the industry.</em>	  </p>
+  <p align="left" class="aaa" style="text-indent: 40px"><em>&nbsp;</em>	  </p>
   <p align="left" class="aaa" style="text-indent: 40px">&nbsp;</p>	  </tr>
 	<tr>
 	  <td valign="top" width="33%"><p>&nbsp;</p>
@@ -68,9 +68,10 @@ body,td,th {
 	<p align="left" style="text-indent: 40px"><i><font color="#0000FF" face="Consolas"><strong>Publications and Preprints</strong></font></i></p>
 	<p align="left" style="text-indent: 40px"><strong><font>Proof-of-Learning with Incentive Security</font></strong><font color="#8080FF">  <font ><a href="https://arxiv.org/abs/2404.09005"><font color="#8080FF">[Arxiv]</font></a></font></font></p>
 	<p align="left" style="text-indent: 40px"><u>Zishuo Zhao</u>, Zhixuan Fang, Xuechao Wang, Xi Chen, Yuan Zhou</p>
-	<p align="left" style="text-indent: 40px">In submission (2024).&nbsp;</p>
+	<p align="left" style="text-indent: 40px">EC FMGT Workshop, 2024.&nbsp;</p>
+<p align="left" style="text-indent: 40px">In submission .&nbsp;</p>
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
-<p align="left" style="text-indent: 40px"><strong>Personalized Pricing with Group Fairness Constraint</strong></p>
+<p align="left" style="text-indent: 40px"><strong>Personalized Pricing with Group Fairness Constraint&nbsp;</strong></p>
 	<p align="left" style="text-indent: 40px">Xin Chen*, Zexing Xu*, <u>Zishuo Zhao</u>*, Yuan Zhou* (alphabetical order)</p>
 	<p align="left" style="text-indent: 40px">ACM FAccT, 2023</p>
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
@@ -93,7 +94,7 @@ body,td,th {
 <p align="left" style="text-indent: 40px">David Simchi-Levi*, <u>Zishuo Zhao</u>*, Yuan Zhou*</p>
 <p align="left" style="text-indent: 40px">&nbsp;</p>
 	<p align="left" style="text-indent: 40px"><strong>Decentralized Verification Game</strong></p>
-	<p align="left" style="text-indent: 40px"><em>(an interest-driven project, collaborators TBA)</em></p>
+	<p align="left" style="text-indent: 40px"><em>(an interest-driven project; preprint of a preliminary version:&nbsp; <a href="https://arxiv.org/abs/2406.01794">[Arxiv]</a>)</em></p>
 <p align="left" style="text-indent: 40px">&nbsp;</p></td>
 	</tr>
 	<tr>
