--- a/index.html
+++ b/index.html
@@ -1,126 +1,5 @@
-<html>
+Due to the current stress and anticipated challenges in my academic career, my homepage is temporarily unavailable. Updates will be provided as my situation evolves. <br><br>
 
-<head>
-<title>Zishuo Zhao's Homepage</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<style type="text/css">
-body,td,th {
-    font-family: Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
-}
-.aaa {
-    font-family: Cambria, Hoefler Text, Liberation Serif, Times, Times New Roman, serif;
-}
-</style>
-</head>
+To friends who might be curious about the situation: I am aware that my research work is generally weak in a competitive environment. Despite this, I am willingly taking a few years to explore some starry-eyed projects that I am passionate about. This is a highly risky move as a senior PhD candidate, so I am currently refraining from most social activities unless absolutely necessary to maintain a calm and focused mind. <br><br>
 
-<body bgcolor="lavender" text="#000000">
-<table width="100%" height="100%" border="1" cellpadding="4" cellspacing="4" bordercolor="#000060" bordercolorlight="#00FFFF" bordercolordark="#000080">
-	<!-- MSTableType="nolayout" -->
-	<tr>
-		<td height="160" colspan="3" valign="top">
-		<!-- MSCellType="ContentHead" -->
-		
-<p align="center"><font face="Calibri Light"><font size="6" >Zishuo Zhao</font></font><font color="8080FF"> </font></p>
-<div align="center">
-  <p><font color="#8080FF" >PhD Candidate, Industrial Engineering, University of Illinois Urbana-Champaign
-  </font></p>
-  <p><span style="text-indent: 40px">Expected graduation: Summer 2026&nbsp;</span></p>
-</div></td>
-	</tr>
-
-	<tr>
-		<td width="33%"  valign="top">
-		<!-- MSCellType="ContentBody" -->
-		<p align="left" style="text-indent: 40px">&nbsp;</p>
-		<p align="left" style="text-indent: 40px"><font>Welcome to my homepage! </font></p>
-	    <p align="left" style="text-indent: 40px">I am Zishuo Zhao, a&nbsp;fourth-year PhD student in the Department of ISE, UIUC, majoring in Operations Research, advised by Professor Yuan Zhou. </p>
-        <p align="left" style="text-indent: 40px">I am&nbsp; currently visiting MIT and working with David Simchi-Levi from Fall 2023 to Summer 2024.</p>
-        <p align="left" style="text-indent: 40px">Office: E18 440F&nbsp;</p>
-        <p align="left" style="text-indent: 40px">My <font ><a href="CV/ZishuoZhao-CV.pdf"><font color="8080FF">[CV]</font></a></font></p>
-
-
-
-	  <p style="text-indent: 40px">&nbsp;</p></td>
-		<td width="31%" colspan="2" valign="top">
-		<!-- MSCellType="NavBody" -->
-		<p align="left" style="text-indent: 40px">&nbsp;</p>
-		<p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF"><strong>Research Interest</strong></font></i> </p>
-		<p align="left" style="text-indent: 40px">
-  <font >I currently do research on <font color="#0000FF"> Mechanism Design</font>, and my research interest spans  the fields in (the intersection of) Operations Research, EconCS and Security. </p>
-		<p align="left" style="text-indent: 40px">Particularly, my recent research  focus is on the design of reliable and sustainable platforms  for digital economy and AI, with a special interest in mechanism design for blockchain and decentralized AI platforms. </p>
-		<p align="left" style="text-indent: 40px">My research has won <font color="#0000FF">Best Paper Award</font> at <font><em>NeurIPS  Workshop on&nbsp;Decentralization and Trustworthy Machine Learning in Web3</em>.</font></p>
-		<p align="left" style="text-indent: 40px">During the visit at MIT, I am working on data-driven
-		  mechanism design based on statistical/online learning. </p>
-  <p align="left" class="aaa" style="text-indent: 40px"><em>P.S. I am very glad to know that my recent research projects on the intersection of blockchain mechanism design and (decentralized/trustworthy) AI, though currently in an immature form, have garnered some industrial interest, especially from several startup companies. While I am enthusiastic about the potential of combining academia and industry in the long term, my current academic pressures limit my capacity to engage in industrial projects at this time. Nevertheless, I am happy to have general discussions with both academic and industry professionals about related topics and am open to academic collaboration and exploring possible future applications of my research in the industry.</em>	  </p>
-  <p align="left" class="aaa" style="text-indent: 40px">&nbsp;</p>	  </tr>
-	<tr>
-	  <td valign="top" width="33%"><p>&nbsp;</p>
-	    <p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF"><strong>Contacts</strong></font></i></p>
-
-	    <p align="left" style="text-indent: 40px"><font >zishuoz2 [at] illinois.edu (expires in &gt;2025/06) </font></p>
-	    <p align="left" style="text-indent: 40px">wiku30 [at] mit.edu (expires in 2024/08)</p>
-        <p align="left" style="text-indent: 40px"> <font ><a href="http://www.github.com/wiku30"> <font color="#8080FF">https://www.github.com/wiku30</font></a></font> <font >(permanent)</font></p>
-        <p align="left" style="text-indent: 40px"><font color="#8080FF" ><a href="https://www.facebook.com/zishuo.zhao.528"></a></font></p>
-        <p align="left" style="text-indent: 40px">&nbsp;</p>
-      <p align="left" style="text-indent: 40px"><font >ORCID: <font color="#8080FF"><a href="https://orcid.org/0000-0003-4247-7272"><font color=#0000D0>0000-0003-4247-7272</font></a></font></font></p>      </td>
-	  <td colspan="2" valign="top">
-	<p align="left" style="text-indent: 40px">&nbsp;</p>
-	<p align="left" style="text-indent: 40px"><i><font color="#0000FF" face="Consolas"><strong>Publications and Preprints</strong></font></i></p>
-	<p align="left" style="text-indent: 40px"><strong><font>Proof-of-Learning with Incentive Security</font></strong><font color="#8080FF">  <font ><a href="https://arxiv.org/abs/2404.09005"><font color="#8080FF">[Arxiv]</font></a></font></font></p>
-	<p align="left" style="text-indent: 40px"><u>Zishuo Zhao</u>, Zhixuan Fang, Xuechao Wang, Xi Chen, Yuan Zhou</p>
-	<p align="left" style="text-indent: 40px">In submission (2024).&nbsp;</p>
-	<p align="left" style="text-indent: 40px">&nbsp;</p>
-<p align="left" style="text-indent: 40px"><strong>Personalized Pricing with Group Fairness Constraint</strong></p>
-	<p align="left" style="text-indent: 40px">Xin Chen*, Zexing Xu*, <u>Zishuo Zhao</u>*, Yuan Zhou* (alphabetical order)</p>
-	<p align="left" style="text-indent: 40px">ACM FAccT, 2023</p>
-	<p align="left" style="text-indent: 40px">&nbsp;</p>
-	<p align="left" style="text-indent: 40px"><strong>Bayesian Mechanism Design for Blockchain Transaction Fee Allocation</strong></p>
-	<p align="left" style="text-indent: 40px"> Xi Chen*, David Simchi-Levi*, <u>Zishuo Zhao</u>*, Yuan Zhou* (alphabetical order)</p>
-	<p align="left" style="text-indent: 40px"><font color="#0000FF">Best Paper Award, </font><font>NeurIPS  Workshop on&nbsp;Decentralization and Trustworthy Machine Learning in Web3, 2022</font></p>
-<p align="left" style="text-indent: 40px"> <font >CESC 2022</font></p>
-	<p align="left" style="text-indent: 40px">&nbsp;</p>
-	<p align="left" style="text-indent: 40px"><strong>Dynamic Car Dispatching and Pricing: Revenue and Fairness for Ridesharing Platforms</strong></p>
-	<p align="left" style="text-indent: 40px"><u>Zishuo Zhao</u>, Xi Chen, Xuefeng Zhang, Yuan Zhou</p>
-	<p align="left" style="text-indent: 40px"> <font >IJCAI 2022</font>, <font color="0000C0">Long Oral</font> (top 3.75%)</p>
-	<p align="left" style="text-indent: 40px">&nbsp;</p>
-	<p align="left" style="text-indent: 40px"><font ><strong>ClusterSLAM: A SLAM Backend for Simultaneous Rigid Body Clustering and Motion Estimation</strong></font><font color="#8080FF"> </font><font ><a href="https://link.springer.com/article/10.1007/s41095-020-0195-3"><font color="#8080FF">[Link] </font></a></font></p>
-	<p align="left" style="text-indent: 40px"><font >Jiahui Huang, Sheng Yang, <u>Zishuo Zhao</u>, Yukun Lai, Shi-Min Hu. </font></p>
-	<p align="left" style="text-indent: 40px"><font > <font >CVMJ 2021</font></font></p>
-	<p align="left" style="text-indent: 40px"><font ><font >ICCV 2019</font><font color="#0000C0"> </font></font><font ><a href="https://link.springer.com/article/10.1007/s41095-020-0195-3"></a></font></p>
-	<p align="left" style="text-indent: 40px">&nbsp;</p>
-	<p align="left" style="text-indent: 40px"><em><font color="#0000FF" face="Consolas"><strong>Working Projects</strong></font></em>	</p>
-	<p align="left" style="text-indent: 40px"><strong>Incentive-Aware Dynamic Auction for Budgeted Bidders</strong></p>
-<p align="left" style="text-indent: 40px">David Simchi-Levi*, <u>Zishuo Zhao</u>*, Yuan Zhou*</p>
-<p align="left" style="text-indent: 40px">&nbsp;</p>
-	<p align="left" style="text-indent: 40px"><strong>Decentralized Verification Game</strong></p>
-	<p align="left" style="text-indent: 40px"><em>(an interest-driven project, collaborators TBA)</em></p>
-<p align="left" style="text-indent: 40px">&nbsp;</p></td>
-	</tr>
-	<tr>
-		<td height="737" colspan="2" valign="top">
-<p align="left" style="text-indent: 40px">&nbsp;</p>
-
-		<p align="left" style="text-indent: 40px"><i><font color="#0000FF" face="Consolas">Competitions Attended</font></i>
-		  <p align="left" style="text-indent: 40px"><font ><font color="#0000D0"><a href="https://thuctf2020.redbud.info/scoreboard">THUCTF2020</a></font></font>, <font >12th place </font>
-		    <font color="#000000" ><a href="ctf/CTF_writeup.pdf"><font color="8080FF">[Writeup]</font></a></font>
-		  <p align="left" style="text-indent: 40px"><font >2020/09 - 2020/10 </font>
-		  <p align="left" style="text-indent: 40px"><font ><font color="#0000D0">The 24th Artificial Inteligence Programming Contest</font> of Tsinghua University</font>, <font >12th place </font>
-		
-		<p align="left" style="text-indent: 40px"><font >2020/03 - 2020/05</font></p>
-		<p align="left" style="text-indent: 40px">
-<font ><a href="https://ai.net9.org/games/dorado/articles"><font color="#0000D0">The 20th Artificial Inteligence Programming Contest</font></a> of Tsinghua University</font>, <font >15th place </font></p>
-	  <p align="left" style="text-indent: 40px"><font >2016/03 - 2016/05</font></p>
-	  <p align="left" style="text-indent: 40px">&nbsp;</p></td>
-		<td  valign="top" width="31%"><p>&nbsp;</p>
-		  <p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF">Extracurricular Life </font></i></p>
-		<p align="left" style="text-indent: 40px"><font >Beside math and computer sciences, I am also interested in music and visual arts since my childhood, and was good at writing essays &amp; poems during high school times. I still maintain <font color="#0000FF">Photography</font>, <font color="0000ff">Singing</font> and <font color="0000ff">Writing</font> as my main hobbies, and have developed new interests in <font color="8080ff">Orienteering</font> and <font color="8080ff">Sketching</font> during college years.</font></p>
-		<p align="left" style="text-indent: 40px">Particularly, I wrote <a href="2022/morning_star.html"> <font color="#8080FF">a recap of  2022</font></a> in Classical Chinese.</p>
-	  <p align="left" style="text-indent: 40px">&nbsp;</p></td>
-	</tr>
-</table>
-
-<p align="right"><i><font color="#7070C0" >Last updated on 2024-04-30</font></i></p>
-
-</body>
-
-</html>
+My CV is available at: https://wiku30.xyz/CV/ZishuoZhao-CV.pdf
