--- a/index.html
+++ b/index.html
@@ -2,4 +2,6 @@ Due to the current stress and anticipated challenges in my academic career, my h
 
 To friends who might be curious about the situation: I am aware that my research work is generally weak in a competitive environment. Despite this, I am willingly taking a few years to explore some starry-eyed projects that I am passionate about. This is a highly risky move as a senior PhD candidate, so I am currently refraining from most social activities unless absolutely necessary to maintain a calm and focused mind. <br><br>
 
-My CV is available at: https://wiku30.xyz/CV/ZishuoZhao-CV.pdf
+Estimated time before re-open: ~3 years.<br><br>
+
+My CV is available at: <a href=https://wiku30.xyz/CV/ZishuoZhao-CV.pdf>https://wiku30.xyz/CV/ZishuoZhao-CV.pdf</a>
