--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
-Due to the current stress and anticipated challenges in my academic career, my homepage is temporarily unavailable. Updates will be provided as my situation evolves. <br><br>
-
-To friends who might be curious about the situation: I am aware that my research work is generally weak in a competitive environment. Despite this, I am willingly taking a few years to explore some starry-eyed projects that I am passionate about. This is a highly risky move as a senior PhD candidate, so I am currently refraining from most social activities unless absolutely necessary to maintain a calm and focused mind. <br><br>
-
-Estimated time before re-open: ~3 years.<br><br>
-
-My CV is available at: <a href=https://wiku30.xyz/CV/ZishuoZhao-CV.pdf>https://wiku30.xyz/CV/ZishuoZhao-CV.pdf</a>
+<p>Due to the current stress and anticipated challenges in my academic career, my homepage is temporarily unavailable. Updates will be provided as my situation evolves. <br><br>
+  
+  To friends who might be curious about the situation: I am aware that my research work is generally weak in a competitive environment. Despite this, I am willingly taking a few years to explore some starry-eyed projects that I am passionate about. This is a highly risky move as a senior PhD candidate, so I am currently refraining from most social activities unless absolutely necessary to maintain a calm and focused mind. <br><br>
+  
+  Estimated time before re-open: ~3 years.<br><br>
+  
+  My CV is available at: <a href=https://wiku30.xyz/CV/ZishuoZhao-CV.pdf>https://wiku30.xyz/CV/ZishuoZhao-CV.pdf</a></p>
+<p>&nbsp;</p>
+<p>Process of re-opening: (5%)</p>
+<p>-----------------------------------------------------------</p>
+<p>Update 2024/06/29: Despite the awareness of competitiveness in academia, I do find the values and meaningfulness of the current work I am trying to do. Since my ultimate goal in my career is to eventually be able to follow my heart and explore the topics I am interested, it is a good thing for me to be able to do it for this moment. BTW I am going to attend EC and INFORMS Security Conference. Keep tuned if you are interested in these conferences!</p>
