--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ body,td,th {
 <div align="center">
   <p><font color="#8080FF" >PhD Candidate, Industrial Engineering, University of Illinois Urbana-Champaign
   </font></p>
-  <p><span style="text-indent: 40px">Expected graduation: Summer 2026&nbsp;</span></p>
+  <p><span style="text-indent: 40px">Expected graduation: TBA (2026-2028)&nbsp; &nbsp;</span></p>
 </div></td>
 	</tr>
 
